--- a/src/app/styles/blog.css
+++ b/src/app/styles/blog.css
@@ -71,6 +71,11 @@
     margin: 25px 0;
 }
 
+.blog-card:hover{
+    box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
+    background: linear-gradient(0deg, transparent 30%, rgb(67 126 206) 100%) !important;
+}
+
 .blog-card:hover img{
     transform: scale(1.1);
     transition: .5s;
