--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -281,10 +281,15 @@ footer .search-icon{
 .product-card {
     border: 1px solid #E3ECF6;
     border-radius: 5px;
-    padding: 3px;
+    padding: 2px;
     text-align: center;
     min-height: 210px;
 }
+
+.product-card:hover{
+    box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
+    background: linear-gradient(0deg, transparent 30%, rgb(67 126 206) 100%) !important;
+} 
 
 .product-card img {
     width: 100%;
@@ -450,6 +455,13 @@ footer .search-icon{
     min-height: 235px;
 }
 
+.review-card:hover{
+    border-image: linear-gradient(#437ece -30%, #4d9f0c00) 10%;
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
+}
+
 .review-card img {
     width: 100%;
     height: 100px;
@@ -519,6 +531,13 @@ footer .search-icon{
     border-radius: 5px;
     padding: 10px 15px;
     flex-wrap: wrap;
+}
+
+.comparisons-container:hover{
+    border-image: linear-gradient(#437ece -30%, #4d9f0c00) 10%;
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
 }
 
 .comparisons-slider img {
