--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,26 @@ h5,
 h6 {
   margin: 0 !important;
   font-family: 'Lato', sans-serif !important;
-  font-weight: 600 !important;
+}
+
+h1{
+  font-size:34px !important;
+  font-weight: 400 !important;
+}
+
+/* h2{
+  font-size:30px !important;
+  font-weight: 400 !important;
+} */
+
+h3{
+  font-size:26px !important;
+  font-weight: 400 !important;
+}
+
+h4{
+  font-size:22px !important;
+  font-weight: 400 !important;
 }
 
 p {
@@ -108,14 +127,15 @@ select {
   font-size: 18px;
   color: var(--heading-color);
   opacity: 80%;
+  line-height: 30px;
 }
 
 .site-main-heading {
-  font-weight: 600 !important;
+  font-weight: 400 !important;
   font-size: 30px;
   line-height: 34px;
   color: var(--heading-color);
-  margin: 0 0 20px !important;
+  margin: 0 0 15px !important;
 }
 
 .site-main-heading::after {
@@ -130,7 +150,7 @@ select {
 .site_main_btn {
   padding: 10px 30px !important;
   background: var(--secondary-color) !important;
-  border: none !important;
+  border: 1px solid transparent !important;
   min-width: 200px;
   font-weight: 400 !important;
   font-size: 17px !important;
@@ -138,7 +158,9 @@ select {
 }
 
 .site_main_btn:hover {
-  background: var(--secondary-color) !important;
+  background: #F4F7FB !important;
+  color: var(--secondary-color) !important;
+  border: 1px solid var(--secondary-color) !important;
 }
 
 .site_image {
@@ -287,10 +309,10 @@ input[type="checkbox"]:checked {
 }
 
 .site-card-active {
-  box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
+  box-shadow: 0px 2px 8px rgba(77, 82, 136, 0.15);
   background: linear-gradient(0deg, transparent 30%, rgb(67 126 206) 100%) !important;
 }
 
 .swiper .swiper-wrapper{
-  padding: 10px 0;
+  padding: 2px 0;
 }
