--- a/src/app/styles/blog.css
+++ b/src/app/styles/blog.css
@@ -8,7 +8,7 @@
 
 .breadcrumb-section{
     background:var(--bg-product);
-    padding: 22px 0;
+    padding: 8px 0 15px;
 }
 
 .breadcrumb-group .breadcrumb-items a{
@@ -72,7 +72,7 @@
 }
 
 .blog-card:hover{
-    box-shadow: 0px 19px 20px rgba(77, 82, 136, 0.15);
+    box-shadow: 0px 2px 8px rgba(77, 82, 136, 0.15);
     background: linear-gradient(0deg, transparent 30%, rgb(67 126 206) 100%) !important;
 }
 
@@ -83,6 +83,7 @@
 
 .blog-card .blog-card-img{
     overflow: hidden;
+    position: relative;
 }
 
 .blog-card,
@@ -119,10 +120,9 @@
     color: var(--heading-color);
     width: 55%;
     position: absolute;
-    bottom: 30%;
+    bottom: 0;
     right: 10px;
-    border-radius: 5px;
-    /* transform: translateY(-50%); */
+    border-radius: 5px 5px 0 0;
 }
 .blog-card .category, 
 .cardsGrid .blog-card .category{
@@ -186,14 +186,16 @@ button.view-blog{
     gap: 5px;
     padding: 10px 30px;
     height: 50px;
-    border: none !important;
+    border: 1px solid transparent !important;
     font-family: 'Lato', sans-serif !important;
     font-weight: 400 !important;
     font-size: 18px;
 }
 
 button.view-blog:hover {
-    background: var(--secondary-color) !important;
+    background: #F4F7FB !important;
+    color: var(--secondary-color) !important;
+    border: 1px solid var(--secondary-color) !important;
   }
 
 button.view-blog i{
@@ -375,7 +377,9 @@ button.view-blog i{
 .blog-card .category{
     font-size: 14px;
     color: var(--blog-category);
+    margin: 0 0 8px !important;
 }
+
 .content-para{
     color: rgba(39, 48, 78, 0.9);
     line-height: 1.7;
