--- a/src/app/styles/responsive.css
+++ b/src/app/styles/responsive.css
@@ -13,7 +13,7 @@
   }
 
   .comparisons-slider > .row {
-    padding: 10px;
+    padding: 10px 0px;
     border-top: 1px solid rgba(39, 48, 78, 0.2);
   }
 
@@ -310,14 +310,14 @@
 
   .nav-links-mobile .navbar-brand {
     color: #fff;
-    font-size: 22px;
+    font-size: 20px;
     display: block;
     border-bottom: 1px solid #fff;
     width: 100%;
     margin-right: 0px;
     text-align: center;
     padding: 15px 0px;
-    font-weight: 500;
+    font-weight: 400;
   }
 
   .nav-links-mobile .navbar-brand:last-child {
@@ -543,6 +543,25 @@
 
 /* Mobile Responsive Start */
 @media screen and (max-width: 767px) {
+
+  .top-sticky{
+    top: 0;
+    transition: .5s;
+  }
+
+  .row{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+
+  .row>*{
+    --bs-gutter-x: 0.5rem;
+  }
+
+  .small-p-0{
+    padding: 0 !important;
+  }
+
   .graph-bar {
     width: 100% !important;
     margin: 10px 0 0 !important;
@@ -564,10 +583,11 @@
 
   .hero-card-container {
     margin: 30vw 0 0;
+    padding: 5px 0 !important;
   }
 
   .site-main-heading {
-    font-size: 28px !important;
+    font-size: 32px !important;
   }
 
   .hero_section h1 {
@@ -595,9 +615,9 @@
     justify-content: space-between;
   }
 
-  .hero-card-content .card-heading {
+  body .product-header .hero-card-content .card-heading {
     font-size: 17px;
-    padding: 0 20px 10px;
+    padding: 0 20px 10px !important;
     line-height: 20px;
   }
 
@@ -703,15 +723,19 @@
 
   /* Product Page Start  */
 
-  .product-header .product-inner-content {
-    font-size: 16px;
+  .product-header .product-inner-content, .compare-tab-content ul li, .pros-corns-section ul li, .para_content_text, .filtered-data-select span, .content-para p{
+    font-size: 17px !important;
+  }
+
+  .pros-corns-section{
+    margin: 0 0 15px;
   }
 
   .sec-mobile_accordion {
     display: block;
   }
   .review-content {
-    font-size: 16px;
+    font-size: 17px;
   }
 
   .site_tabs_hide {
@@ -1090,7 +1114,7 @@
   }
 
   .contentPara {
-    font-size: 16px !important;
+    font-size: 17px !important;
   }
 
   .breadcrumb-section .heading-primary {
@@ -1226,10 +1250,10 @@
   .overlay:before {
     content: " ";
     position: absolute;
-    width: 40%;
+    width: 20%;
     height: 70%;
     right: -5px;
-    background: linear-gradient(270deg, #fafbfd, transparent);
+    background: linear-gradient(270deg, #fafbfd 50%, transparent);
     z-index: 100;
   }
 
@@ -1270,7 +1294,7 @@
   }
 
   .outline-section ol li.outline-active:before {
-    right: 99% !important;
+    right: 100% !important;
   }
 
   .sec-mobile_accordion {
@@ -1354,7 +1378,7 @@
     justify-content: center;
     gap: 8px;
     font-size: 18px !important;
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
   }
 
   .btn-icon i {
@@ -1373,7 +1397,18 @@
     color: var(--heading-color);
     font-weight: 400;
     font-size: 17px;
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    line-height: 22px !important;
+    padding: 0 10px;
+  }
+
+  .filter-data > div{
+    width: 28px;
+  }
+
+  .filter-data > div > svg{
+    fill: var(--heading-color);
   }
 
   body .best-product-listing {
@@ -1395,6 +1430,7 @@
     width: 50%;
     text-align: left;
     padding-left: 50px;
+    padding-top: 0 !important;
   }
 
   .best-product-listing .compare_image {
@@ -1494,7 +1530,7 @@
     span {
     min-width: auto !important;
     padding: 0 5px;
-    font-size: 12px !important;
+    font-size: 15px !important;
     width: 50%;
   }
 
@@ -1531,7 +1567,7 @@
 
   .mobile-comparison-tool {
     position: relative;
-    margin: 20px 0 !important;
+    margin: 0 0 20px !important;
   }
 
   .mobile-comparison-tool .comparison-wrapper {
@@ -1574,10 +1610,11 @@
     background: #f4f7fb;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 3px;
+    width: -moz-fit-content;
     width: fit-content;
-    padding: 2px 10px;
+    padding: 0px 6px;
     font-weight: 500;
-    font-size: 13px;
+    font-size: 17px;
     color: var(--secondary-color);
     display: flex;
     align-items: center;
@@ -1585,6 +1622,7 @@
     position: absolute;
     top: -8px;
     left: -8px;
+    line-height: 1.8;
   }
 
   .mobile-comparison-tool .mobile-close_icon i {
@@ -1683,12 +1721,24 @@
     max-width: 50% !important;
     width: 50% !important;
   }
-
+  .breadcrumb {
+    padding-bottom: 8px !important;
+  }
   .compare-container .compare_image {
     width: 150px !important;
     height: 150px !important;
   }
-
+  .best-product-listing .compare_image {
+    width: 70px !important;
+    height: 70px !important;
+  }
+  .question-marker-icon {
+    margin-left: 2px;
+  }
+  .question-marker-icon svg {
+    width: 15px;
+    height: 15px;
+  }
   .table-section-desktop .best-price-section {
     margin: 0 !important;
     border-top: 1px solid #ddd !important;
@@ -1704,21 +1754,27 @@
     padding: 0 0 10px;
   }
 
-  body .best-product-listing .product-listing-inner-content .pros-corns-section ul li{
-    font-size:14px !important;
+  body
+    .best-product-listing
+    .product-listing-inner-content
+    .pros-corns-section
+    ul
+    li {
+    font-size: 14px !important;
   }
 
-  .thumb-slider .swiper-prev, .thumb-slider .swiper-next{
+  .thumb-slider .swiper-prev,
+  .thumb-slider .swiper-next {
     width: 40px !important;
     font-size: 28px !important;
     height: 40px !important;
   }
 
-  body .mobile-content-left{
-    text-align:left !important;
+  body .mobile-content-left {
+    text-align: left !important;
   }
 
-  .rating-section .rating-start .star i{
+  .rating-section .rating-start .star i {
     font-size: 28px !important;
   }
 
@@ -1727,8 +1783,55 @@
     display: block;
   }
 
-  .blog-slider, .product-slider{
+  .blog-slider,
+  .product-slider {
     margin: 0;
   }
+  .menuModal .modal-dialog .modal-content .modal-body .nav-links-mobile {
+    padding: 0px;
+  }
+  .best-price-section {
+    margin: 0 0 15px;
+  }
+  .table-accordion .spec-section .spec-item .spec-col span {
+    width: 20px;
+    height: 20px;
+    margin-left: 2px;
+  }
+  .table-accordion .spec-section .spec-item .spec-col span svg {
+    width: 13px;
+    height: 13px;
+  }
+
+  .score-section .score-detail h5 span,
+  .score-section .score-detail p span {
+    width: 22px !important;
+    height: 22px !important;
+    margin-left: 2px !important;
+  }
+
+  .score-section .score-detail h5 span svg,
+  .score-section .score-detail p span svg {
+    width: 15px !important;
+    height: 15px !important;
+  }
+
+  .pros-header{
+    margin: 10px 0 !important;
+  }
+
+  .pros-corns-section ul li{
+    padding: 10px 0 !important;
+  }
+
+  .breadcrumb-group .breadcrumb-items{
+    line-height:1;
+  }
+}
+
+@media screen and (min-width: 992px){
+  body .sidebar-width {
+    display: block !important;
+}
 }
 
