--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -1,3 +1,10 @@
+header.sticky{
+    position:sticky;
+    background:#fff;
+    z-index: 1000;
+    transition: .5s;
+}
+
 .nav-dropdown-item .nav-item{
     position:static !important;
 }
