Mobile doc fixes

--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -86,7 +86,7 @@ footer .search-icon{
 }
 
 .footer-container{
-    padding: 40px 0;
+    padding: 40px 1.5rem;
 }
 
 .footer-container .footer-content p {
