--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -158,9 +158,9 @@ select {
 }
 
 .site_main_btn:hover {
-  background: #F4F7FB !important;
-  color: var(--secondary-color) !important;
-  border: 1px solid var(--secondary-color) !important;
+  background:#326ebf !important;
+  color: #fff !important;
+  border: 1px solid #326ebf !important;
 }
 
 .site_image {
@@ -319,4 +319,23 @@ input[type="checkbox"]:checked {
 
 .content-para p {
   padding: 0 0 20px;
+}
+.home .hero-searchbar .search-btn:hover{
+  background: #326ebf !important;
+  color: #fff;
+}
+.electronics{
+ position: relative;
+}
+.electronics::after{
+  content: " ";
+    width: 13.5%;
+    height: 2px;
+    border-radius: 100px;
+    position: absolute;
+    left: 50%;
+    background: #fff;
+    transform: translateX(-50%);
+    z-index: 999;
+    bottom: 33%;
 }
